--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -2039,13 +2039,17 @@ body > section {
 @media (max-width:425px){
   body {
   width:425px;
+  }
+
 }
-}
-@media (max-width: 362px){
+@media (max-width: 360px){
 	/* .menu-items {
 		font-size: 67px;
     margin-left: 366px;
 } */
+body {
+width:360px;
+}
 
 #about .title li {
     font-size: 15px;
